//CODEGEN BELOW - DO NOT TOUCH ME
syntax = "proto3";
package chrono_test;

message ChronoWrapper {
  DateTimeUtc inner = 1;
}

message DeltaWrapper {
  TimeDelta inner = 1;
}

